# claude-usage-dashboard

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/esp_bsp/: bsp_display.c
firmware/: README.md
main/: CMakeLists.txt  app_admin.c  app_admin.h  app_button.c  app_button.h  app_claude_api.c  app_claude_api.h  app_config.c  app_config.h  app_display.c  app_display.h  app_main.c  app_main.h  app_portal.c  app_portal.h  app_sleep.c  app_sleep.h  app_touch.c  app_touch.h  app_wifi.c  app_wifi.h  claude_logo.c  idf_component.yml  ui_dashboard.c  ui_dashboard.h  ui_setup.c  ui_setup.h
